// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#PasswordField() it should display validation errors 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "password": "a",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      type="password"
      value="a"
    />
  </div>
</form>
`;

exports[`#PasswordField() should confirm passwords are equal 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "confirmPassword": "wizard",
      "password": "wizard",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      type="password"
      value="wizard"
    />
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="confirmPassword"
      onChange={[Function]}
      type="password"
      value="wizard"
    />
  </div>
</form>
`;

exports[`#PasswordField() should how message that passwords are not equal 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "confirmPassword": "w",
      "password": "wizard",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      type="password"
      value="wizard"
    />
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="confirmPassword"
      onChange={[Function]}
      type="password"
      value="w"
    />
  </div>
</form>
`;

exports[`#PasswordField() should how message that passwords are not equal 2`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "confirmPassword": "wi",
      "password": "wizard",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      type="password"
      value="wizard"
    />
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="confirmPassword"
      onChange={[Function]}
      type="password"
      value="wi"
    />
  </div>
  <div
    className="alert mt-2 alert-danger undefined"
  >
    Fields do not match
  </div>
</form>
`;

exports[`#PasswordField() should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "password": "",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
</form>
`;

exports[`#PasswordField() should render an input field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "password": "joe",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      type="password"
      value="joe"
    />
  </div>
</form>
`;
